First design mk 2: Fixing mobile layout issues

--- a/css/wedding.css
+++ b/css/wedding.css
@@ -70,6 +70,8 @@ nav ul li {
 	    padding-bottom: 56.25%; /* 16:9 */
 	    padding-top: 25px;
 	    height: 0;
+      top: 50%;
+      transform: translateY(-5%);
   }
 }
 #intro {
@@ -78,6 +80,15 @@ nav ul li {
 @media only screen and (max-width: 960px) {
   .disappear {
     display: none;
+  }
+
+  .videoWrapper {
+	    position: relative;
+	    padding-bottom: 56.25%; /* 16:9 */
+	    padding-top: 25px;
+	    height: 0;
+      top: 50%;
+      transform: translateY(-5%);
   }
 }
 @media only screen and (min-width: 960px) {
